Fix alignment with the reference image

--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,11 @@ body {
 header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 3rem 1fr 3.5rem 3rem .75rem;
+  grid-template-rows: 3.5rem 1fr 3.5rem 3rem .75rem;
 }
 
 header h1 {
-  margin: .75rem 1rem;
+  margin: 0 1rem;
   font-size: 1.8rem;
   font-weight: normal;
   font-style: italic;
@@ -41,7 +41,7 @@ header img {
 }
 
 header h2 {
-  margin: 0 1.5rem 1rem;
+  margin: 1rem 1.5rem 0;
   font-weight: normal;
   font-style: italic;
   color: #fff;
